k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helidon-build-publisher-backend
  labels:
    app: helidon-build-publisher-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helidon-build-publisher-backend
  template:
    metadata:
      labels:
        app: helidon-build-publisher-backend
    spec:
      restartPolicy: Always
      containers:
      - image: helidon-build-publisher-backend:latest
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 120
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /live
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: build-publisher-storage
          mountPath: "/storage"
      volumes:
      - name: build-publisher-storage
        persistentVolumeClaim:
          claimName: build-publisher-storage

---

apiVersion: v1
kind: Service
metadata:
  name: helidon-build-publisher-backend
  labels:
    app: helidon-build-publisher-backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9190
    targetPort: 8080
  selector:
    app: helidon-build-publisher-backend
  sessionAffinity: None
