k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helidon-build-publisher-frontend
  labels:
    app: helidon-build-publisher-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helidon-build-publisher-frontend
  template:
    metadata:
      labels:
        app: helidon-build-publisher-frontend
    spec:
      restartPolicy: Always
      containers:
      - image: helidon-build-publisher-frontend-ui:latest
        imagePullPolicy: IfNotPresent
        name: ui
        ports:
        - containerPort: 80
      - image: helidon-build-publisher-frontend-api:latest
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 3
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /live
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: build-publisher-storage
          mountPath: "/storage"
      volumes:
      - name: build-publisher-storage
        persistentVolumeClaim:
          claimName: build-publisher-storage

---

apiVersion: v1
kind: Service
metadata:
  name: helidon-build-publisher-frontend
  labels:
    app: helidon-build-publisher-frontend
spec:
  type: ClusterIP
  ports:
  - name: ui
    port: 9090
    targetPort: 80
  - name: api
    port: 9091
    targetPort: 8080
  selector:
    app: helidon-build-publisher-frontend
  sessionAffinity: None
