k8s/frontend-ingress-localhost.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helidon-build-publisher-frontend-ui
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: helidon-build-publisher-frontend
          servicePort: 9090

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helidon-build-publisher-frontend-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api(/|$)(.*)
        backend:
          serviceName: helidon-build-publisher-frontend
          servicePort: 9091
